# falcon-formation

./: .env.enc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.dev.yml  compose.prod.yml  compose.yml  gunicorn.conf.py  pyproject.toml  ruff.toml  run_server.py  tox.ini  tox.toml  visualization.ipynb
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.github/workflows/: ci.yml  falcon-formation-peregrines.yml  falcon-formation-template.yml  falcon-formation.yml  ghcr.yml
data/: FALCONS_1.json.enc  extras.json  team.json.enc  team_example.json
scripts/: mongo_backup.sh  mongo_restore.sh
src/falcon_formation/: __init__.py  __main__.py  cli.py  create_teams.py  dash_app.py  data_models.py  data_operations.py  database.py  falcon_formation.py  github_api.py  holdsport_api.py  main.py  telegram_api.py  update_player_skill.py  update_skill.py
src/falcon_formation/data_models/: __init__.py  guest.py  member.py  player.py  position.py  skill.py  team_distribution.py  team_metadata.py
src/falcon_formation/server/: __init__.py  add_guests.py  dash_app.py  edit_team.py  manage_team.py  register_winner.py  routes.py
src/falcon_formation/server/assets/: app_styles.css
tests/: conftest.py  create_teams_test.py  data_models_test.py  data_operations_test.py  database_test.py  falcon_formation_test.py  github_api_test.py  holdsport_api_test.py  main_test.py  telegram_api_test.py
tom-exe/: data.txt  main.py
