# Build System
[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

# Project Metadata
[project]
  name = "falcon-formation"
  version = "0.1.0"
  description = "Create evenly distributed hockey teams."
  readme = "README.md"
  requires-python = ">=3.12"
  license = { file = "LICENSE" }
  authors = [{ name = "Daniel Mizsak", email = "info@pythonvilag.hu" }]
  keywords = ["falcons", "hockey", "team", "split"]
  classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
  ]
  dependencies = ["aiohttp", "dash", "flask", "gunicorn", "pymongo"]
  [project.optional-dependencies]
    dev = [
      "aioresponses",
      "mongomock",
      "mypy",
      "pre-commit",
      "pytest",
      "pytest-asyncio",
      "pytest-cov",
      "ruff",
      "tox",
    ]

  [project.urls]
    Repository = "https://github.com/daniel-mizsak/falcon-formation"

# Tools
# Hatch
[tool.hatch]
  [tool.hatch.build.targets.wheel]
    packages = ["src/falcon_formation"]

# MyPy
[tool.mypy]
  ignore_missing_imports = true
  pretty = true
  show_column_numbers = true
  show_error_context = true
  strict = true
  warn_unreachable = true
  warn_unused_ignores = true

# Pytest
[tool.pytest.ini_options]
  testpaths = ["tests"]
  asyncio_default_fixture_loop_scope = "function"

# Coverage
[tool.coverage.report]
  exclude_also = ["if TYPE_CHECKING:", "if __name__ == '__main__':"]
  omit = ["*/__main__.py", "*/server/*"]
